# CRUD-com-SQLite3

./: pyproject.toml
